fixed chart styling to div wraps some white space

--- a/webapp/src/assets/styles/_multi-chart.scss
+++ b/webapp/src/assets/styles/_multi-chart.scss
@@ -13,6 +13,8 @@
 	// border-left: 1px solid $rhz-navigation-hover-bg-color-glass;
 	// border-right: 1px solid $rhz-navigation-hover-bg-color-glass;
 	// box-shadow: -1px 2px 3px grey;
+	white-space: nowrap;
+	overflow-x: auto;
 	margin-top: 1rem;
 	margin-bottom: 2rem;
 	margin-left: 1%;
